// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Population App renders the App correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="App"
      >
        <header>
          <nav>
            <div
              class="d-flex flex-row"
            >
              <a
                href="#/"
              >
                <svg
                  class="icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M217.9 256L345 129c9.4-9.4 9.4-24.6 0-33.9-9.4-9.4-24.6-9.3-34 0L167 239c-9.1 9.1-9.3 23.7-.7 33.1L310.9 417c4.7 4.7 10.9 7 17 7s12.3-2.3 17-7c9.4-9.4 9.4-24.6 0-33.9L217.9 256z"
                  />
                </svg>
              </a>
              <div
                class="year"
              >
                2022
              </div>
            </div>
            <h1>
              Latin America Population
            </h1>
            <div>
              <svg
                class="icon"
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <svg
                class="icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M416.3 256c0-21 13.1-38.9 31.7-46.1-4.9-20.5-13-39.7-23.7-57.1-6.4 2.8-13.2 4.3-20.1 4.3-12.6 0-25.2-4.8-34.9-14.4-14.9-14.9-18.2-36.8-10.2-55-17.3-10.7-36.6-18.8-57-23.7C295 82.5 277 95.7 256 95.7S217 82.5 209.9 64c-20.5 4.9-39.7 13-57.1 23.7 8.1 18.1 4.7 40.1-10.2 55-9.6 9.6-22.3 14.4-34.9 14.4-6.9 0-13.7-1.4-20.1-4.3C77 170.3 68.9 189.5 64 210c18.5 7.1 31.7 25 31.7 46.1 0 21-13.1 38.9-31.6 46.1 4.9 20.5 13 39.7 23.7 57.1 6.4-2.8 13.2-4.2 20-4.2 12.6 0 25.2 4.8 34.9 14.4 14.8 14.8 18.2 36.8 10.2 54.9 17.4 10.7 36.7 18.8 57.1 23.7 7.1-18.5 25-31.6 46-31.6s38.9 13.1 46 31.6c20.5-4.9 39.7-13 57.1-23.7-8-18.1-4.6-40 10.2-54.9 9.6-9.6 22.2-14.4 34.9-14.4 6.8 0 13.7 1.4 20 4.2 10.7-17.4 18.8-36.7 23.7-57.1-18.4-7.2-31.6-25.1-31.6-46.2zm-159.4 79.9c-44.3 0-80-35.9-80-80s35.7-80 80-80 80 35.9 80 80-35.7 80-80 80z"
                />
              </svg>
            </div>
          </nav>
        </header>
        <div>
          <div
            class="filter"
          >
            <input
              placeholder="Filter country list"
              type="text"
            />
          </div>
          <div
            class="column"
          >
            <ul
              class="row-wrap"
            >
              <li
                class="half"
              >
                <a
                  class="card country"
                  href="#/country/AR"
                >
                  <div
                    class="flag"
                  >
                    <img
                      alt="flag"
                      src="https://flagcdn.com/ar.svg"
                    />
                    <div
                      class="column country-name"
                    >
                      <h3>
                        Argentina
                      </h3>
                      <h3>
                        [2020] 700
                      </h3>
                    </div>
                  </div>
                </a>
              </li>
              <li
                class="half"
              >
                <a
                  class="card country"
                  href="#/country/MX"
                >
                  <div
                    class="flag"
                  >
                    <img
                      alt="flag"
                      src="https://flagcdn.com/mx.svg"
                    />
                    <div
                      class="column country-name"
                    >
                      <h3>
                        Mexico
                      </h3>
                      <h3>
                        [2020] 2,000
                      </h3>
                    </div>
                  </div>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="App"
    >
      <header>
        <nav>
          <div
            class="d-flex flex-row"
          >
            <a
              href="#/"
            >
              <svg
                class="icon"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M217.9 256L345 129c9.4-9.4 9.4-24.6 0-33.9-9.4-9.4-24.6-9.3-34 0L167 239c-9.1 9.1-9.3 23.7-.7 33.1L310.9 417c4.7 4.7 10.9 7 17 7s12.3-2.3 17-7c9.4-9.4 9.4-24.6 0-33.9L217.9 256z"
                />
              </svg>
            </a>
            <div
              class="year"
            >
              2022
            </div>
          </div>
          <h1>
            Latin America Population
          </h1>
          <div>
            <svg
              class="icon"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <svg
              class="icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416.3 256c0-21 13.1-38.9 31.7-46.1-4.9-20.5-13-39.7-23.7-57.1-6.4 2.8-13.2 4.3-20.1 4.3-12.6 0-25.2-4.8-34.9-14.4-14.9-14.9-18.2-36.8-10.2-55-17.3-10.7-36.6-18.8-57-23.7C295 82.5 277 95.7 256 95.7S217 82.5 209.9 64c-20.5 4.9-39.7 13-57.1 23.7 8.1 18.1 4.7 40.1-10.2 55-9.6 9.6-22.3 14.4-34.9 14.4-6.9 0-13.7-1.4-20.1-4.3C77 170.3 68.9 189.5 64 210c18.5 7.1 31.7 25 31.7 46.1 0 21-13.1 38.9-31.6 46.1 4.9 20.5 13 39.7 23.7 57.1 6.4-2.8 13.2-4.2 20-4.2 12.6 0 25.2 4.8 34.9 14.4 14.8 14.8 18.2 36.8 10.2 54.9 17.4 10.7 36.7 18.8 57.1 23.7 7.1-18.5 25-31.6 46-31.6s38.9 13.1 46 31.6c20.5-4.9 39.7-13 57.1-23.7-8-18.1-4.6-40 10.2-54.9 9.6-9.6 22.2-14.4 34.9-14.4 6.8 0 13.7 1.4 20 4.2 10.7-17.4 18.8-36.7 23.7-57.1-18.4-7.2-31.6-25.1-31.6-46.2zm-159.4 79.9c-44.3 0-80-35.9-80-80s35.7-80 80-80 80 35.9 80 80-35.7 80-80 80z"
              />
            </svg>
          </div>
        </nav>
      </header>
      <div>
        <div
          class="filter"
        >
          <input
            placeholder="Filter country list"
            type="text"
          />
        </div>
        <div
          class="column"
        >
          <ul
            class="row-wrap"
          >
            <li
              class="half"
            >
              <a
                class="card country"
                href="#/country/AR"
              >
                <div
                  class="flag"
                >
                  <img
                    alt="flag"
                    src="https://flagcdn.com/ar.svg"
                  />
                  <div
                    class="column country-name"
                  >
                    <h3>
                      Argentina
                    </h3>
                    <h3>
                      [2020] 700
                    </h3>
                  </div>
                </div>
              </a>
            </li>
            <li
              class="half"
            >
              <a
                class="card country"
                href="#/country/MX"
              >
                <div
                  class="flag"
                >
                  <img
                    alt="flag"
                    src="https://flagcdn.com/mx.svg"
                  />
                  <div
                    class="column country-name"
                  >
                    <h3>
                      Mexico
                    </h3>
                    <h3>
                      [2020] 2,000
                    </h3>
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tests Population App renders the HomePage correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="filter"
        >
          <input
            placeholder="Filter country list"
            type="text"
          />
        </div>
        <div
          class="column"
        >
          <ul
            class="row-wrap"
          >
            <li
              class="half"
            >
              <a
                class="card country"
                href="/country/AR"
              >
                <div
                  class="flag"
                >
                  <img
                    alt="flag"
                    src="https://flagcdn.com/ar.svg"
                  />
                  <div
                    class="column country-name"
                  >
                    <h3>
                      Argentina
                    </h3>
                    <h3>
                      [2020] 700
                    </h3>
                  </div>
                </div>
              </a>
            </li>
            <li
              class="half"
            >
              <a
                class="card country"
                href="/country/MX"
              >
                <div
                  class="flag"
                >
                  <img
                    alt="flag"
                    src="https://flagcdn.com/mx.svg"
                  />
                  <div
                    class="column country-name"
                  >
                    <h3>
                      Mexico
                    </h3>
                    <h3>
                      [2020] 2,000
                    </h3>
                  </div>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="filter"
      >
        <input
          placeholder="Filter country list"
          type="text"
        />
      </div>
      <div
        class="column"
      >
        <ul
          class="row-wrap"
        >
          <li
            class="half"
          >
            <a
              class="card country"
              href="/country/AR"
            >
              <div
                class="flag"
              >
                <img
                  alt="flag"
                  src="https://flagcdn.com/ar.svg"
                />
                <div
                  class="column country-name"
                >
                  <h3>
                    Argentina
                  </h3>
                  <h3>
                    [2020] 700
                  </h3>
                </div>
              </div>
            </a>
          </li>
          <li
            class="half"
          >
            <a
              class="card country"
              href="/country/MX"
            >
              <div
                class="flag"
              >
                <img
                  alt="flag"
                  src="https://flagcdn.com/mx.svg"
                />
                <div
                  class="column country-name"
                >
                  <h3>
                    Mexico
                  </h3>
                  <h3>
                    [2020] 2,000
                  </h3>
                </div>
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
